--- a/biome.json
+++ b/biome.json
@@ -4,7 +4,11 @@
     "enabled": true
   },
   "linter": {
-    "ignore": ["node_modules", ".next", "packages/tsconfig"],
+    "ignore": [
+      "node_modules",
+      ".next",
+      "packages/tsconfig"
+    ],
     "enabled": true,
     "rules": {
       "recommended": true,
@@ -15,6 +19,7 @@
         "noNonNullAssertion": "off"
       },
       "correctness": {
+        "all": true,
         "useExhaustiveDependencies": "off"
       }
     }
