--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -23,16 +23,16 @@
     "next-safe-action": "^7.8.1",
     "next-themes": "^0.3.0",
     "nuqs": "^1.18.0",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@sentry/nextjs": "^8",
+    "@supabase/sentry-js-integration": "^0.2.0",
     "@types/node": "^22",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@sentry/nextjs": "^8",
-    "@supabase/sentry-js-integration": "^0.2.0"
+    "typescript": "^5.5.4"
   }
 }
