--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,19 +12,19 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@futbiz/ui": "workspace:*",
-    "@futbiz/analytics": "workspace:*",
     "@calcom/embed-react": "^1.5.0",
+    "@futbiz/analytics": "workspace:*",
+    "@futbiz/ui": "workspace:*",
     "geist": "^1.3.1",
     "next": "14.2.7",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "usehooks-ts": "^3.1.0"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^22",
     "@types/react": "^18",
-    "@types/react-dom": "^18"
+    "@types/react-dom": "^18",
+    "typescript": "^5.5.4"
   }
 }
