--- a/packages/supabase/tsconfig.json
+++ b/packages/supabase/tsconfig.json
@@ -1,8 +1,5 @@
 {
   "extends": "@futbiz/typescript/base.json",
-  "compilerOptions": {
-    "baseUrl": "."
-  },
-  "include": ["."],
+  "include": ["src", "."],
   "exclude": ["node_modules"]
 }
