--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "clean": "git clean -xdf node_modules",
     "clean:workspaces": "turbo clean",
     "dev": "turbo dev --parallel",
-    "dev:web": "turbo dev --filter=@futbiz/web",
     "dev:app": "turbo dev --filter=@futbiz/app",
+    "dev:web": "turbo dev --filter=@futbiz/web",
+    "dev:jobs": "turbo dev --filter=@futbiz/jobs",
     "start:web": "turbo start --filter=@futbiz/web",
     "start:app": "turbo start --filter=@futbiz/app",
     "test": "turbo test --parallel",
