--- a/packages/jobs/package.json
+++ b/packages/jobs/package.json
@@ -3,12 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "dev:jobs": "bunx trigger.dev@beta dev",
     "clean": "rm -rf .turbo node_modules",
     "lint": "biome check .",
     "format": "biome format --write .",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@trigger.dev/sdk": "3.0.0-beta.55"
+    "@trigger.dev/sdk": "3.0.0-beta.56"
   }
 }
