--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "start:app": "turbo start --filter=@futbiz/app",
     "test": "turbo test --parallel",
     "format": "biome format --write .",
-    "lint": "turbo lint && manypkg check",
+    "lint": "turbo lint && bun lint:repo",
     "lint:repo": "bunx sherif@latest",
     "lint:repo:fix": "bunx sherif@latest --fix",
     "typecheck": "turbo typecheck"
