--- a/package.json
+++ b/package.json
@@ -11,11 +11,16 @@
     "clean": "git clean -xdf node_modules",
     "clean:workspaces": "turbo clean",
     "dev": "turbo dev --parallel",
-    "dev:app": "turbo dev --filter=@futbiz/app",
     "dev:web": "turbo dev --filter=@futbiz/web",
+    "dev:app": "turbo dev --filter=@futbiz/app",
+    "dev:api": "turbo dev --filter=@futbiz/api",
+    "dev:email": "turbo dev --filter=@futbiz/email",
     "dev:jobs": "turbo dev --filter=@futbiz/jobs",
     "start:web": "turbo start --filter=@futbiz/web",
     "start:app": "turbo start --filter=@futbiz/app",
+    "start:api": "turbo start --filter=@futbiz/api",
+    "start:email": "turbo start --filter=@futbiz/email",
+    "start:jobs": "turbo start --filter=@futbiz/jobs",
     "test": "turbo test --parallel",
     "format": "biome format --write .",
     "lint": "turbo lint && bun lint:repo",
