--- a/packages/supabase/package.json
+++ b/packages/supabase/package.json
@@ -7,7 +7,7 @@
     "lint": "biome check .",
     "format": "biome format --write .",
     "typecheck": "tsc --noEmit",
-    "db:generate": "supabase gen types --lang=typescript --project-id $PROJECT_ID --schema public > src/types/db.ts"
+    "db:generate": "supabase gen types --lang=typescript --project-id ihryibecslapugyrapok --schema public > src/types/db.ts"
   },
   "dependencies": {
     "@futbiz/logger": "workspace:*",
