feat(ui): improve navbar

--- a/biome.json
+++ b/biome.json
@@ -26,5 +26,10 @@
   },
   "formatter": {
     "indentStyle": "space"
+  },
+  "javascript": {
+    "formatter": {
+      "semicolons": "asNeeded"
+    }
   }
 }
