--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -22,6 +22,7 @@
     "next": "14.2.7",
     "next-international": "^1.2.4",
     "next-safe-action": "^7.8.1",
+    "next-safe-navigation": "^0.3.3",
     "next-themes": "^0.3.0",
     "nuqs": "^1.18.0",
     "react": "^18.3.1",
