--- a/packages/jobs/package.json
+++ b/packages/jobs/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev:jobs": "bunx trigger.dev@beta dev",
+    "jobs": "bunx trigger.dev@beta dev",
     "clean": "rm -rf .turbo node_modules",
     "lint": "biome check .",
     "format": "biome format --write .",
