--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev -p 3000",
+    "test": "vitest",
     "build": "next build",
     "clean": "git clean -xdf .next .turbo node_modules",
     "lint": "biome lint",
@@ -17,8 +18,11 @@
     "@futbiz/kv": "workspace:*",
     "@futbiz/supabase": "workspace:*",
     "@futbiz/ui": "workspace:*",
+    "@tanstack/react-table": "^8.20.5",
+    "date-fns": "^4.1.0",
     "dub": "^0.36.5",
     "geist": "^1.3.1",
+    "install": "^0.13.0",
     "next": "14.2.7",
     "next-international": "^1.2.4",
     "next-safe-action": "^7.9.0",
@@ -27,14 +31,19 @@
     "nuqs": "^1.18.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "zustand": "^5.0.0"
   },
   "devDependencies": {
     "@sentry/nextjs": "^8",
     "@supabase/sentry-js-integration": "^0.2.0",
+    "@testing-library/react": "^16.0.1",
     "@types/node": "^22",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "typescript": "^5.5.4"
+    "@vitejs/plugin-react": "^4.3.3",
+    "jsdom": "^25.0.1",
+    "typescript": "^5.5.4",
+    "vitest": "^2.1.3"
   }
 }
