--- a/biome.json
+++ b/biome.json
@@ -25,7 +25,8 @@
     }
   },
   "formatter": {
-    "indentStyle": "space"
+    "indentStyle": "space",
+    "lineWidth": 140
   },
   "javascript": {
     "formatter": {
